tests/neg/i10268.scala
object Main {
  def test[T] = ?//test // error
}