tests/neg/i10268.check
-- [E006] Not Found Error: tests/neg/i10268.scala:2:16 -----------------------------------------------------------------
2 |  def test[T] = ?//test // error
  |                ^
  |                Not found: ?
  |
  | longer explanation available when compiling with `-explain`
